BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Call_Objective_vod__c.object
<CustomObject>
    <description>Call Objective can be accessed through Call Report</description>
    <fields>
        <fullName>Account_Plan_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Associates Call Objective to Account Plan</description>
        <label>Plan</label>
        <referenceTo>Account_Plan_vod__c</referenceTo>
        <relationshipLabel>Interaction Objectives</relationshipLabel>
        <relationshipName>Call_Objectives_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Tactic_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to Account Tactic</description>
        <label>Activity</label>
        <referenceTo>Account_Tactic_vod__c</referenceTo>
        <relationshipLabel>Interaction Objectives</relationshipLabel>
        <relationshipName>Call_Objectives_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that this tasks belongs to</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Objectives</relationshipLabel>
        <relationshipName>Call_Objectives_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendees_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Attendees free text, MM users to record Product Launch Event location</description>
        <label>Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Event_Target_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Business Event Target</description>
        <label>Business Event Target</label>
        <referenceTo>Business_Event_Target_vod__c</referenceTo>
        <relationshipLabel>Call Objectives</relationshipLabel>
        <relationshipName>Call_Objectives_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the event this task belongs to</description>
        <label>Business Event</label>
        <referenceTo>Business_Event_vod__c</referenceTo>
        <relationshipLabel>Call Objectives</relationshipLabel>
        <relationshipName>Call_Objectives_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLM_Messaging_vod__c</fullName>
        <description>When populated, the text in this field will display for the CLM Call Objective.</description>
        <label>CLM Messaging</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLM_Presentation_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If populated, selecting the call objective launches this CLM presentation.</description>
        <label>CLM Presentation</label>
        <referenceTo>Clm_Presentation_vod__c</referenceTo>
        <relationshipLabel>Call Objectives</relationshipLabel>
        <relationshipName>Call_Objectives_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call2_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the call that this task belongs to</description>
        <label>Interaction</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Interaction Objectives</relationshipLabel>
        <relationshipName>Call_Objectives_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment_vod__c</fullName>
        <description>The comment for this task</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Flag_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If MR finish this task, this flag is true</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Report_BMS_SHARED__c</fullName>
        <formula>IF( Completed_Flag_vod__c  = TRUE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Partner_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates a Contract Partner record to the Call Objective</description>
        <label>Contract Partner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Contract_Partner_vod__c.Status_vod__c</field>
                <operation>notEqual</operation>
                <value>Activated_vod, Signed_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract_Partner_vod__c</referenceTo>
        <relationshipLabel>Call Objectives</relationshipLabel>
        <relationshipName>Call_Objective_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to associate a Contract Call Objective with a Contract Template. Results are filtered to show only Contract records where Template = True, Lock = True, and Status = Activated.</description>
        <label>Contract</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3</booleanFilter>
            <errorMessage>Contracts must be activated templates</errorMessage>
            <filterItems>
                <field>Contract_vod__c.Template_vod__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contract_vod__c.Lock_vod__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contract_vod__c.Status_vod__c</field>
                <operation>equals</operation>
                <value>Activated_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract_vod__c</referenceTo>
        <relationshipLabel>Call Objectives</relationshipLabel>
        <relationshipName>Call_Objectives_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_BMS_SHARED__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Simple date field, MM users to record Product Launch Event dates</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_vod__c</fullName>
        <description>The date time of plan or activity date for task</description>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Method_vod__c</fullName>
        <description>The way of EPPV or PI</description>
        <label>Delivery Method</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCW_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_Date_vod__c</fullName>
        <description>The date range for each actions</description>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Information_vod__c</fullName>
        <description>Information note for this task</description>
        <label>Information</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Monitoring_Type_vod__c</fullName>
        <description>Untranslated label of the record type of the Inventory Monitoring record to create.  This is only valid for Call Objectives with the Inventory Monitoring record type.</description>
        <label>Inventory Monitoring Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Monitoring_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the Inventory Monitoring record associated to the Call Objective</description>
        <label>Inventory Monitoring</label>
        <referenceTo>Inventory_Monitoring_vod__c</referenceTo>
        <relationshipLabel>Call Objectives</relationshipLabel>
        <relationshipName>Call_Objectives_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Location free text, MM users to record Product Launch Event location</description>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_BMS_EMEA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VPRO EMEA April 2014: field used to link the Call Objective to a Meeting.</description>
        <label>Meeting</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipLabel>Interaction Objectives</relationshipLabel>
        <relationshipName>Interaction_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NCW_Reason_vod__c</fullName>
        <description>The reason of why does the MR could not complied with this task</description>
        <label>NCW Reason</label>
        <picklist>
            <controllingField>Delivery_Method_vod__c</controllingField>
            <picklistValues>
                <fullName>Pass this MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_vod__c</fullName>
        <label>Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Executable_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates that whether a Call Objective is good for execution (based on prerequisite execution), it works in conjunction with the Prerequisite field and uses negative logic</description>
        <label>Non Executable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_PIs_vod__c</fullName>
        <description>The number of PI copy which the MR pass</description>
        <label>Number Of PIs</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Patients_vod__c</fullName>
        <description>The number of patients to which the doctor prescribes the new drug</description>
        <label>Number Of Patients</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objective_Title_BMS_SHARED__c</fullName>
        <label>Objective Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_By_Default_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, the call objective will display on the call report by default. If unchecked, users will be able to find the call objective by going through a search dialog on the call report.</description>
        <label>On by default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_Click_Completion_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this box is checked, a call objective can be completed by checking the box on the call report. The call objective&apos;s page layout will not display within the call report.</description>
        <label>One click completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Objective_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to a parent call objective. Used for grouping recurring call objectives. Automatically populated.</description>
        <label>Parent Objective</label>
        <referenceTo>Call_Objective_vod__c</referenceTo>
        <relationshipLabel>Call Objectives</relationshipLabel>
        <relationshipName>Call_Objectives_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Tactic_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Associates Call Objective to Account Plan Tactics</description>
        <label>Strategy</label>
        <referenceTo>Plan_Tactic_vod__c</referenceTo>
        <relationshipLabel>Interaction Objectives</relationshipLabel>
        <relationshipName>Call_Objectives_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Explain_Flag_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the task is pre-explain call, this flag is true</description>
        <label>Pre-Explain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prerequisite_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Prerequisite indicates that there is another Call Objective that needs to be executed prior to the execution of the current Call Objective. It works in conjunction with the Executable field.</description>
        <label>Prerequisite</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Call_Objective_vod__c.Recurring_vod__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>Call_Objective_vod__c.Account_Plan_vod__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Plan_vod__c</valueField>
            </filterItems>
            <filterItems>
                <field>Call_Objective_vod__c.From_Date_vod__c</field>
                <operation>lessThan</operation>
                <valueField>$Source.From_Date_vod__c</valueField>
            </filterItems>
            <filterItems>
                <field>Call_Objective_vod__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Call_Objective_vod__c</referenceTo>
        <relationshipLabel>Call Objectives (Prerequisite)</relationshipLabel>
        <relationshipName>Call_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Product Catalog for this objective.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Call Objectives</relationshipLabel>
        <relationshipName>Call_Objectives_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this checkbox is checked, the call objective is recurring. It will repeatedly show on the call report until the To date has been reached, It can be completed multiple times. Each time it is completed, a new call objective record is created.</description>
        <label>Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suggestion_Reason_vod__c</fullName>
        <description>Displays Suggestion Reason information</description>
        <label>Suggestion Reason</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Suggestion_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates Call Objective to Suggestion</description>
        <label>Suggestion</label>
        <referenceTo>Suggestion_vod__c</referenceTo>
        <relationshipLabel>Call Objectives</relationshipLabel>
        <relationshipName>Call_Objectives_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Date_vod__c</fullName>
        <description>The date range for each actions</description>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visibility_vod__c</fullName>
        <description>Defines Call Objective visibility</description>
        <label>Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>All_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner_vod</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Interaction Objective</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Event_vod__c</columns>
        <columns>Account_vod__c</columns>
        <columns>Name_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CO-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction Objectives</pluralLabel>
    <recordTypes>
        <fullName>BMS_EMEA</fullName>
        <active>true</active>
        <description>Interaction Objective specific for EMEA</description>
        <label>BMS EMEA</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_KAM_CORE</fullName>
        <active>true</active>
        <label>BMS KAM</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLM_vod</fullName>
        <active>false</active>
        <description>Used for Call Objectives that launch CLM Presentations</description>
        <label>CLM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract_Partner_vod</fullName>
        <active>true</active>
        <description>Used for Call Objectives that launch Contract Partner activation or signature capture.</description>
        <label>Contract Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract_vod</fullName>
        <active>true</active>
        <description>Used for completing Contract Call Objectives.</description>
        <label>Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>EPPV_vod</fullName>
        <active>false</active>
        <description>EPPV</description>
        <label>EPPV</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inventory_Monitoring_vod</fullName>
        <active>true</active>
        <description>Used for Call Objectives that launch Inventory Monitoring</description>
        <label>Inventory Monitoring</label>
    </recordTypes>
    <recordTypes>
        <fullName>PI_vod</fullName>
        <active>false</active>
        <description>PI</description>
        <label>PI</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Launch_BMS_US</fullName>
        <active>true</active>
        <label>Product Launch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suggestion_vod</fullName>
        <active>true</active>
        <description>Used for creating new Call Objectives from Suggestions</description>
        <label>Suggestion_vod</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Recurring_Contract_Partner</fullName>
        <active>true</active>
        <description>Throw error when Recurring is true and Contract Partner has a value</description>
        <errorConditionFormula>Recurring_vod__c &amp;&amp; NOT(ISBLANK(Contract_Partner_vod__c))</errorConditionFormula>
        <errorMessage>Contract Partner Call Objectives must not be Recurring.</errorMessage>
    </validationRules>
</CustomObject>